--- a/style.css
+++ b/style.css
@@ -12,26 +12,26 @@
 
 body {
 	font-family: caviar;
-
 }
 
 #title {
-	font-family: caviar;
+	font-family: caviarItalic;
 	font-size: 1.5em;
-	color: #213F4F;
+	color: rgba(38, 194, 204, 0.2);
 	background-color: rgba(38, 194, 204, 0.2);
 	padding: 5px;
+	height: 100px;
 }
 
 #navi {
-	font-family: caviarItalic;
-	margin-top: 20px;
-	display: inline-block;
+	font-family: caviar;
+	text-decoration: none;
+
 }
 
 a {
-	list-style: none;
 	text-decoration: none;
+	list-style: none;
 	color: #1E718C;
 }
 
@@ -41,7 +41,7 @@ a:hover {
 
 #footer {
 	clear:both;
-	background-color: rgba(244, 240, 12, 0.3);
+	background-color: rgba(38, 194, 204, 0.2);
 	margin-top: 60px;
 }
 
@@ -54,9 +54,14 @@ a:hover {
 
 /*Homepage*/
 .cover {
-	width: 900px;
-	margin: 0 auto;
-	opacity: .7;
+	font-family: caviarItalic;
+	font-size: 100px;
+	color: rgba(255, 255, 204, 0.5);
+	background-image: url(images/beachCover.jpg);
+	opacity: 0.7;
+	padding: 5px;
+	height: 450px;
+	text-align: center;
 }
 
 .line {
@@ -71,26 +76,20 @@ a:hover {
 .line h2 {
 	text-align: center;
 	font-family: caviar;
-
+	font-size: 20px;
 }
-
 
 #pics{
 	position:relative;
 	margin:0 auto;
-
 }
 
 .box{
-	display:inline-block;
 	width:275px; 
 	height:250px;
 	display:inline-block;
-	margin-right:5px;
+	
 }
-
-
-
 
 .box img{
 	position:absolute;
@@ -126,10 +125,8 @@ a:hover {
 }
 
 .contentspace{
-
 	margin-top: 100px;
 }
-
 
 #featuredNames {
 	color: black;
