--- a/style.css
+++ b/style.css
@@ -10,6 +10,11 @@
 	src: url(caviar/CaviarDreams_Italic.ttf);
 }
 
+@font-face {
+	font-family: caviarDream;
+	src: url(caviar/CaviarDreams.ttf);
+}
+
 body {
 	font-family: caviar;
 }
@@ -17,19 +22,68 @@ body {
 #title {
 	font-family: caviarItalic;
 	font-size: 1.5em;
-	color: rgba(38, 194, 204, 0.2);
+	color: rgba(38, 194, 204, 0.8);
 	background-color: rgba(38, 194, 204, 0.2);
-	padding: 5px;
+	padding: 10px;
 	height: 100px;
 }
 
-#navi {
-	font-family: caviar;
-	text-decoration: none;
-
+.btn {
+	background: #1E718C;
+	opacity: 0.4;
+	width: 50px;
+	height: 40px;
+	position: absolute;
+	z-index:1000;
+	top: 25px;
+	right: 10px;
+	color: white;
+	border-radius: 15px;
+	font-size: 1em;
+}
+ 
+.exit {
+	background: #1E718C;
+	opacity: 0.4;
+	width: 50px;
+	height: 40px;
+	position: absolute;
+	z-index:1000;
+	top: 25px;
+	right: 10px;
+	color: white;
+	border-radius: 15px;
+	font-size: 1em;
+  	display: none;
 }
 
+#navi {
+	background: #1E718C;
+	opacity: 0.3;
+	position: absolute;
+	z-index: 1000;
+	top: 25px;
+	right: 60px;
+	font-size: 20px;
+	width: 400px;
+	border-radius: 15px;
+	display: none;
+}
+
+#navi li {
+	display: inline;
+	padding: 10px;
+	text-decoration: none;  
+	color: white;
+}
+
+#navi li:hover {
+	color: black;
+}
+
+
 a {
+	font-family: caviarDream;
 	text-decoration: none;
 	list-style: none;
 	color: #1E718C;
@@ -37,6 +91,7 @@ a {
 
 a:hover {
 	color: #7CD6D2;
+	text-decoration: none;
 }
 
 #footer {
@@ -60,7 +115,7 @@ a:hover {
 	background-image: url(images/beachCover.jpg);
 	opacity: 0.7;
 	padding: 5px;
-	height: 450px;
+	height: 510px;
 	text-align: center;
 }
 
