--- a/style.css
+++ b/style.css
@@ -1,5 +1,3 @@
-/*For all pages*/
-
 @font-face {
 	font-family: caviar;
 	src: url(caviar/CaviarDreams_Bold.ttf);
@@ -16,16 +14,19 @@
 }
 
 body {
-	font-family: caviar;
+	font-family: caviarDream;
 }
 
+
+
+/*Header*/
 #title {
 	font-family: caviarItalic;
-	font-size: 1.5em;
+	font-size: 2em;
 	color: rgba(38, 194, 204, 0.8);
 	background-color: rgba(38, 194, 204, 0.2);
-	padding: 10px;
 	height: 100px;
+	padding: 2.5%;
 }
 
 .btn {
@@ -35,10 +36,9 @@ body {
 	height: 40px;
 	position: absolute;
 	z-index:1000;
-	top: 25px;
+	top: 55px;
 	right: 10px;
 	color: white;
-	border-radius: 15px;
 	font-size: 1em;
 }
  
@@ -49,10 +49,9 @@ body {
 	height: 40px;
 	position: absolute;
 	z-index:1000;
-	top: 25px;
+	top: 55px;
 	right: 10px;
 	color: white;
-	border-radius: 15px;
 	font-size: 1em;
   	display: none;
 }
@@ -62,11 +61,10 @@ body {
 	opacity: 0.3;
 	position: absolute;
 	z-index: 1000;
-	top: 25px;
-	right: 60px;
+	top: 55px;
+	right: 65px;
 	font-size: 20px;
 	width: 400px;
-	border-radius: 15px;
 	display: none;
 }
 
@@ -81,7 +79,6 @@ body {
 	color: black;
 }
 
-
 a {
 	font-family: caviarDream;
 	text-decoration: none;
@@ -94,24 +91,9 @@ a:hover {
 	text-decoration: none;
 }
 
-#footer {
-	clear:both;
-	background-color: rgba(38, 194, 204, 0.2);
-	margin-top: 100px;
-}
-
-#footer img {
-	width: 30px;
-	height: 30px;
-}
-
-#footer h6 {
-	text-align: center;
-}
 
 
-
-/*Homepage*/
+/*Content*/
 .cover {
 	font-family: caviarItalic;
 	font-size: 100px;
@@ -120,43 +102,27 @@ a:hover {
 	opacity: 0.7;
 	padding: 5px;
 	height: 510px;
+	width: 100%;
 	text-align: center;
 }
 
 .line {
-	height: 2px;
-	width: 850px;
+	background-color: rgba(38, 194, 204, 0.5);
+	height: 2%;
+	width: 100%;
 	margin: 0 auto;
-	background: black;
-	margin-top: 30px;
-	margin-bottom: 30px;
-}
-
-.line h2 {
+	margin-top: 10px;
+	margin-bottom: 10px;
 	text-align: center;
 	font-family: caviar;
 	font-size: 30px;
 }
 
-#pics{
-	position:relative;
+#pics img{
+	display: inline-block;
+	width: 280px;
+	height: 250px;
 	margin:0 auto;
-
-}
-
-.box{
-	width:275px; 
-	height:250px;
-	display:inline-block;
-
-	
-}
-
-.box img{
-	position:absolute;
-	z-index:1;
-	width:275px; 
-	height:250px;
 }
 
 #content  {
@@ -173,6 +139,7 @@ a:hover {
 .contentspace{
 	margin-top: 100px;
 }
+
 
 #featuredNames {
 	color: black;
@@ -211,46 +178,35 @@ a:hover {
 	border-radius: 50%;
 }
 
-
 .a1 {
 	float:left; 
 	margin: 3px;
 }
 
-.a2{
-	float: right;
-	margin: 3px;
-}
+
 
 /*Tips*/
 #background {
-	background-image: url(images/bluetransition.jpg);
-	background-repeat: no-repeat;
-	background-size: 100%;
-	width: 100%;
-	height: 650px;
+	background-color: rgba(38, 194, 204, 0.9);
+	width: 60%;
+	margin: 0 auto;
+	height: 50%;
 	text-align: center;
-	margin-top: 5%;
 }
-
 
 .flexslider img {
 	margin: 0 auto;
-	margin-top: 20px;
-	padding-top: 20px;
-	float: left;
-	border-radius: 10%;
+	height: 200px;
+	width: 250px;
 }
 
 .caption {
-  width: 700px;
+  width: 50%;
   margin: 0 auto;
   color: rgba(0, 0, 0, .6);
-  margin-top: 20px;
-  padding-top: 20px;
   font-size: 1.1em;
   text-align: center;
-
+ 
 }
 
 .flex-control-paging {
@@ -259,6 +215,34 @@ a:hover {
 
 .flex-direction-nav {
 	list-style-type: none;
-	padding-top: 15px;
-	
+	padding-top: 0px;
+	margin-top: 0px;
 } 
+
+
+/*Footer*/
+#footer {
+	clear:both;
+	background-color: rgba(38, 194, 204, 0.2);
+	margin-top: 100px;
+}
+
+#footer img {
+	width: 30px;
+	height: 30px;
+}
+
+#footer h6 {
+	text-align: center;
+	color: rgba(38, 194, 204, 0.8);
+}
+
+.icons {
+	float: right;
+}
+
+#articles h3 {
+	font-family: caviarDream;
+	color: black;
+}
+
