--- a/style.css
+++ b/style.css
@@ -13,8 +13,10 @@
 	src: url(caviar/CaviarDreams.ttf);
 }
 
-body {
+* {
 	font-family: caviarDream;
+	padding: 0px;
+	margin: 0px;
 }
 
 
@@ -24,81 +26,47 @@ body {
 	font-family: caviarItalic;
 	color: rgba(38, 194, 204, 0.8);
 	background-color: rgba(38, 194, 204, 0.2);
-	height: 80px;
-	padding: 1%;
+	height: 75px;
+	padding: 1%;	
 }
 
 #title h1{
-	font-size: 1.5em;
+	font-size: 2.5em;
 }
-
-a {
-	font-family: caviarDream;
-	text-decoration: none;
-	list-style: none;
-	color: #1E718C;
-}
-
-/*a:hover {
-	color: #7CD6D2;
-	text-decoration: none;
-}*/
-
 
 
 /*Content*/
-
-
 .cover {
-	font-family: caviarItalic;
-	font-size: 100px;
-	color: rgba(255, 255, 204, 0.5);
 	background-image: url(images/beachCover.jpg);
 	opacity: 0.7;
-	padding: 5px;
-	height: 390px;
+	height: 400px;
 	width: 100%;
-	text-align: center;
 }
 
 .line {
 	background-color: rgba(38, 194, 204, 0.5);
-	height: 2%;
-	width: 100%;
+ 	width: 100%;
 	margin: 0 auto;
 	margin-top: 10px;
 	margin-bottom: 10px;
+}
+
+.line h2 {
 	text-align: center;
 	font-family: caviar;
-	font-size: 30px;
+	font-size: 1.7em;
+	color: rgba(0, 0, 0, 0.8);
+}
+
+.line2 {
+	width: 100%;
+	height: 3px;
+	background: black;
+	margin-top: 5%;
 }
 
 #arrow { 
 	display: none;
-}
-
-#lineee{
-	border-bottom: solid black 5px;
-	margin-bottom: 1em;
-
-}
-
-.titles{
-	list-style: none;
-	display: inline;
-	padding: 10%;
-}
-
-#pics {
-	width: 100%;
-
-}
-
-#pics img{
-	display: inline-block;
-	width: 25%;
-	/*padding: 1.6%;*/
-	height: 250px;
 }
 
 #contentBox {
@@ -110,16 +78,62 @@ a {
 
 
 
+/*Pictures and titles*/
+.titles{
+	list-style: none;
+	display: inline-block;
+	font-size: 1.5em;
+	margin-top: 20px;
+}
+
+
+.mobileTitles {
+	display: none;
+}
+/*#pics {
+	width: 100%;
+
+}*/
+
+#pics img{
+	display: inline-block;
+	width: 25%;
+	height: 225px;
+}
 
 #pics img:hover{
 	opacity: 0.8;
 }
 
 
-.a1 {
-	float:left; 
-	margin: 3px;
-	display: none;
+/*articles*/
+.articlesCarousel {
+	font-family: caviarDream;
+	color: black;
+	width: 93%;
+	margin-top: 1%;
+}
+
+.articlesCarousel img{
+	width: 100%;
+	height: 630px;
+}
+
+.slick-slider{
+	position: relative;
+	left: 50px;
+	margin-bottom: 125px;
+
+}
+
+.slick-next {
+	background: rgba(38, 194, 204, 0.7);
+	border-radius: 50%;
+}
+
+.slick-prev {
+	background: rgba(38, 194, 204, 0.7);
+	border-radius: 50%;
 }
 
 
@@ -127,7 +141,6 @@ a {
 #footer {
 	clear:both;
 	background-color: rgba(38, 194, 204, 0.2);
-	margin-top: 100px;
 }
 
 #footer img {
@@ -143,19 +156,3 @@ a {
 .icons {
 	float: right;
 }
-
-#articles h3 {
-	font-family: caviarDream;
-	color: black;
-}
-
-
-
-
-
-
-.contentspace, #hideForNow{
-	display: none;
-
-}
-
