--- a/style.css
+++ b/style.css
@@ -39,7 +39,7 @@
 .cover {
 	background-image: url(images/beachCover.jpg);
 	opacity: 0.7;
-	height: 400px;
+	height: 300px;
 	width: 100%;
 }
 
@@ -70,10 +70,13 @@
 }
 
 #contentBox {
-	float: right;
-	width: 55%;
 	font-size: 1em;
 	display: none;
+}
+
+.blurb {
+	width: 60%;
+	margin: 0 auto;
 }
 
 
@@ -84,6 +87,13 @@
 	display: inline-block;
 	font-size: 1.5em;
 	margin-top: 20px;
+	
+}
+
+
+#hideForDesktop {
+	display: none;
+
 }
 
 
@@ -154,5 +164,9 @@
 }
 
 .icons {
-	float: right;
+	display: inline-block;
+}
+
+.mail {
+	text-align: center;
 }
