--- a/style.css
+++ b/style.css
@@ -19,7 +19,13 @@
 	margin: 0px;
 }
 
-
+#upArrow{
+	clear: both;
+	width: 50px;
+	font-size: 65px;
+	float: right;
+	margin-right: 15px;
+}
 
 /*Header*/
 #title {
@@ -168,5 +174,34 @@
 }
 
 .mail {
+	text-align: center;
+}
+
+
+#emailConfirmBox {
+	background: rgba(255, 255, 255, 0.5);
+	width: 100%;
+	height: 100%;
+	position: fixed;
+	top: 0px;
+	left: 0px;
+	padding: 0px;
+	margin: 0px;
+	overflow: hidden;
+	z-index: 1000;
+}
+
+#thankYou {
+	border: 5px solid rgb(38, 194, 204);
+	background-color: white;
+
+	position: relative;
+	top: calc(20% - 10px);
+
+	height: 250px;
+	width: 300px;
+
+	margin: 0 auto;
+
 	text-align: center;
 }
