--- a/mobile.css
+++ b/mobile.css
@@ -37,9 +37,9 @@ body {
 
 #pics img{
 	display: block;
-	width: 300px;
-	height: 300px;
-	margin: 20px;
+	width: 100%;
+	height: 100%;
+	margin: 0px;
 }
 
 .mobileTitles {
@@ -52,33 +52,26 @@ body {
 
 /*articles*/
 .articlesCarousel {
-	font-family: caviarDream;
-	color: black;
-	width: 70%;
-	margin-top: 1%;
+	display: block;
+	width: 100%;
+	height: auto;
+	margin: 0px;
 }
 
 .articlesCarousel img{
 	width: 100%;
-	height: 270px;
+	height: auto;
 }
 
 .slick-slider{
 	position: relative;
-	left: 30px;
-	margin-bottom: 125px;
+	left: 0px;
+	margin-bottom: 50px;
 }
 
-.slick-next {
-	background: rgba(38, 194, 204, 0.7);
-	border-radius: 50%;
+#upArrow {
+	display: none;
 }
-
-.slick-prev {
-	background: rgba(38, 194, 204, 0.7);
-	border-radius: 50%;
-}
-
 
 #thankYou {
 	height: 50%;
