--- a/style.css
+++ b/style.css
@@ -34,7 +34,7 @@
 .cover {
 	background-image: url(images/beachCover.jpg);
 	opacity: 0.7;
-	height: 280px;
+	height: 250px;
 	width: 100%;
 }
 
@@ -277,6 +277,7 @@ body {
 #title{
 	font-size: 17px;
 	text-align: center;
+	color: white;
 	background-image: url(images/beachCover.jpg);
 }
 
